[metadata]
name = tcpliveplay
version = "0.2.0"
description = pythonic tcpliveplay to simulate tcp traffic

[options]
packages = find:
install_requires =
    scapy>=2.6.0
python_requires = >= 3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    tcp-exec = tcp-exec:main

